# plot

./: CHANGELOG.md  Cargo.toml  README.md  plot.1
.github/workflows/: ci.yml  release.yml
src/: main.rs  pie.rs
